--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BASE_URL=http://localhost:5000/api/v1
+REACT_APP_BASE_PATH_URL=http://localhost:5000/documents
 REACT_APP_BASE_URL_FILES=http://localhost:5000
