--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL=http://localhost:5000/api/v1
-REACT_APP_BASE_URL_FILES=http://localhost:5000
+REACT_APP_BASE_URL=http://203.24.50.22:5000/api/v1
+REACT_APP_BASE_URL_FILES=http://203.24.50.22:5000
